# technical-interview-practice

./: README.md  pyproject.toml
data-structures/: arrays.ipynb  binary-trees.ipynb  example_problems.ipynb  heaps.ipynb  linked-lists.ipynb
