[tool.poetry]
name = "technical-interview-practice"
version = "0.1.0"
description = "venv for technical interview practice"
authors = ["Ryan Skinner <rskinner593@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
